# PMMVP

./: .gitignore  Cargo.toml  README.md  SECURITY.md  THREAT_MODEL.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: agent.rs  biometric.rs  bridge.rs  clipboard.rs  commands.rs  main.rs  state.rs  sync.rs
apps/desktop/src/components/: ConsentDialog.tsx  DetailPane.tsx  EditDialog.tsx  EntryList.tsx  ImportDialog.tsx  LockScreen.tsx  NoteEditDialog.tsx  PasskeyVerifyDialog.tsx  PasswordGenerator.tsx  SettingsDialog.tsx  Sidebar.tsx  SshKeyDialog.tsx  Tile.tsx  TitleBar.tsx  Toast.tsx  TotpField.tsx  TouchIdBanner.tsx  WifiEditDialog.tsx  icons.tsx
apps/desktop/src/lib/: api.ts  categories.ts  format.ts  grouping.ts  theme.ts
apps/macos/: .gitignore  Arca-Bridging-Header.h  README.md  project.yml
apps/macos-credential-provider/: CredentialProvider.entitlements  CredentialProviderViewController.swift  Info.plist  README.md
apps/macos/ArcaAutoFill/: ArcaAutoFill.entitlements  CredentialListView.swift  CredentialProviderViewController.swift  Info.plist
apps/macos/ArcaHost/: ArcaHost.entitlements  ArcaHostApp.swift  Info.plist
apps/macos/ProvisionStub/: Info.plist  ProvisionStub.entitlements  ProvisionStubApp.swift
apps/macos/Shared/: VaultBridge.swift
crates/vault-core/: Cargo.toml
crates/vault-core/src/: breach.rs  crypto.rs  dedupe.rs  error.rs  header.rs  item.rs  lib.rs  passkey.rs  password.rs  secret.rs  security.rs  ssh.rs  sync.rs  totp.rs  vault.rs
crates/vault-ffi/: Cargo.toml
crates/vault-ffi/include/: vault_ffi.h
crates/vault-ffi/src/: lib.rs
crates/vault-secmem/: Cargo.toml
crates/vault-secmem/src/: lib.rs
crates/vault-store/: Cargo.toml
crates/vault-store/src/: error.rs  keychain.rs  lib.rs  secrets.rs
docs/: PASSKEYS.md  SYNC.md
extension/: README.md  install-linux.sh  install-macos.sh  install-windows.ps1
extension/chromium/: background.js  content.css  content.js  manifest.firefox.json  manifest.json  passkey-relay.js  passkey.js  popup.html  popup.js
extension/native-host/: Cargo.toml  no.sybr.vault.firefox.json  no.sybr.vault.json
extension/native-host/src/: main.rs
scripts/: install-app-macos.sh
