[workspace]
resolver = "2"
members = [
    "crates/vault-core",
    "crates/vault-store",
    "crates/vault-ffi",
    "crates/vault-secmem",
    "apps/desktop/src-tauri",
    "extension/native-host",
]

# Keep the heavy Tauri desktop build out of the default `cargo build`/`test` at
# the workspace root; build it explicitly with `-p vault-desktop` (or via the
# Tauri CLI). The other crates are fast and fully testable here.
default-members = [
    "crates/vault-core",
    "crates/vault-store",
    "crates/vault-ffi",
    "crates/vault-secmem",
    "extension/native-host",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["SYBR AS <support@sybr.no>"]
repository = "https://example.invalid/vault"

[workspace.dependencies]
# --- internal ---
vault-core = { path = "crates/vault-core" }
vault-store = { path = "crates/vault-store" }
vault-secmem = { path = "crates/vault-secmem" }

# --- crypto (audited RustCrypto crates only; no custom primitives) ---
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
subtle = "2.6"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
getrandom = "0.2"
data-encoding = "2.6"
# Cross-platform mlock/VirtualLock so secret memory can't be paged to swap.
region = "3"
# WebAuthn passkeys: ES256 (P-256 ECDSA). RustCrypto, no custom EC math.
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
# SSH agent keys: Ed25519 (dalek, audited). The OpenSSH wire encoding is
# hand-rolled from length-prefixed strings and tested byte-exactly against the
# ssh CLI; signing stays internal so the private key never leaves the vault.
# Seeds come from `getrandom` (not dalek's RNG helper), so no `rand_core` feature.
ed25519-dalek = { version = "2", features = ["zeroize"] }

# --- serde / data ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# bincode: simple positional framing for the outer container only.
bincode = "1.3"
# ciborium (CBOR): self-describing, name-tagged encoding for the at-rest item
# payload, so the VaultItem schema can evolve (variant reorder/append) safely.
ciborium = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
# Public Suffix List, compiled in — so a page can't scope a passkey to an eTLD
# (e.g. "github.io", "co.uk") that crosses mutually-distrusting tenants.
psl = "2"

# Release profile: keep symbols light, no debug info leaking secrets via panics.
[profile.release]
panic = "abort"
strip = true
lto = true
