[package]
name = "vault-desktop"
description = "SYBR Passwords — cross-platform desktop password manager (Tauri 2 shell over vault-core/vault-store)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "vault-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Open the "Website" URL in the user's default browser (not in the webview).
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
vault-core.workspace = true
vault-store.workspace = true
uuid.workspace = true
# Cross-platform clipboard, used so secret copies + auto-clear happen in Rust
# rather than exposing plaintext to the webview's clipboard API.
arboard = "3"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
