[package]
name = "vault-desktop"
description = "Arca — cross-platform desktop password manager (Tauri 2 shell over vault-core/vault-store)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "vault-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Open the "Website" URL in the user's default browser (not in the webview).
tauri-plugin-opener = "2"
# Native file picker for CSV import (the file is read in Rust, so exported
# plaintext passwords never pass through the webview).
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
vault-core.workspace = true
vault-store.workspace = true
uuid.workspace = true
# Public Suffix List for passkey RP-ID validation (reject eTLD-scoped rp_ids).
psl.workspace = true
# Cross-platform clipboard, used so secret copies + auto-clear happen in Rust
# rather than exposing plaintext to the webview's clipboard API.
arboard = "3"
# RFC 4180 CSV parsing for importing exports from other password managers.
csv = "1"
# Wi-Fi join QR codes, rendered to SVG in Rust (keeps the plaintext
# passphrase out of the webview — only the image crosses).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# Google Drive sync: blocking HTTP client (runs on the dedicated sync thread).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# PKCE code-challenge hashing + verifier randomness for the OAuth flow.
sha2.workspace = true
getrandom.workspace = true
data-encoding.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
robius-authentication = "0.1"
